# fnv-planner

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  gemini_research  pyproject.toml
.github/workflows/: smoke.yml
config/: quick_perks.txt  real_build_perks.txt
docs/: MECHANICS_SOURCE_MATRIX.md  UI_IMPLEMENTATION_PLAN.md  UI_SPEC.md
scripts/: audit_mechanics_sources.py  audit_perks.py  audit_skill_books.py  check_mechanics_literals.py  check_mechanics_matrix_coverage.py  dump_character.py  dump_graph.py  dump_items.py  dump_perks.py  plan_build.py  prototype_ui.py  review_webui.py  run_webui.py  smoke_ui.py
src/fnv_planner/engine/: build_config.py  build_engine.py  ui_model.py
src/fnv_planner/graph/: dependency_graph.py
src/fnv_planner/gui/: __main__.py  app.py  session.py  window.py
src/fnv_planner/models/: avif.py  (+9 more)
tests/: test_avif_parser.py  test_binary_reader.py  test_book_stats.py  test_build_controller.py  test_build_engine.py  test_character.py  test_dependency_graph.py  test_derived_stats.py  test_dump_items.py  test_dump_items_integration.py  test_dump_perks_integration.py  test_effect_parser.py  test_effect_resolver.py  test_effect_resolver_policy.py  test_gmst_parser.py  test_item_parser.py  test_optimizer_planner.py  test_perk_classification.py  test_perk_parser.py  test_perk_parser_raw_values.py  test_plan_build_script.py  test_planner_conditional_perk_effects.py  test_plugin_merge.py  test_progression_controller.py  test_record_reader.py  test_spell_parser.py  test_ui_model.py  test_webui_export_state.py
webui/: app.js  index.html  styles.css
(+42 files in other folders)
